# convince-me

./: .env  Cargo.toml  README.md
frontend-svelte/: package.json  pnpm-lock.yaml  rsbuild.config.ts
frontend-svelte/src/: App.svelte  index.scss  index.ts  store.ts
frontend-svelte/src/components/: ChatBubble.svelte  InputArea.svelte  SymmetricName.svelte  ThinkingIndicator.svelte  Timer.svelte
frontend-svelte/src/pages/: ChatPage.svelte  IntroductionPage.svelte  TopicPage.svelte
src/: error.rs  main.rs  models.rs  routes.rs
